# news-360-feedback

./: .gitignore  README.md  app.py  audionews.py  audioprocessor.py  pyproject.toml  requirements.txt
.github/workflows/: daily_scrape.yml
data/: articles.csv
src/: audioprocessor.py  cleaner.py  pipeline.py  pyproject.toml  requirements.txt  scraper.py  test.py
